# code-challenges

Binary Tree Inorder Traversal/: Binary Tree Inorder Traversal.ts
Binary Tree Preorder Traversal/: Binary Tree Preorder Traversal.go
Merge Sorted Array/: Merge Sorted Array.ts
Middle of the Linked List/: Middle of the linked lists.ts
Palindrome Number/: palindrome-number.ts
_playground/: pyproject.toml
atcoder/abc/122-b/: main.py
atcoder/abc/150-b/: main.py
atcoder/abc/b-81/: main.py
atcoder/abs/ABC086A/: main.py
integer to roman/: result.ts
leetcode/a-easy/Binary Tree Preorder Traversal/: binary-tree-preorder-traversal.ts
leetcode/a-easy/Richest Customer Wealth/: Richest Customer Wealth.ts
leetcode/a-easy/Search insert position/: Search insert position.ts
leetcode/a-easy/fizz-buzz/: fizz-buzz.ts
leetcode/a-easy/merge two sorted lists/: merge-two-sorted-listed.ts
leetcode/a-easy/palindrome linked list/: palindrome linked list.ts
leetcode/a-easy/remove duplicates from sorted array/: remove duplicates from sorted array.ts
length of last word/: length of last word.ts
longest common prefix/: longest-common-prefix.go  longest-common-prefix.ts
number of step to reduce a number to zero/: number of step to reduce a number to zero.ts
ransom note/: ransom note.ts
remove elem/: remove element.ts
romain-to-integer/: result2.ts  romain-to-integer.go
the k weakest rows ins a matrix/: the k weakest rows ins a matrix.ts
two-sum/: two-sum.ts
valid parentheses/: valid parentheses.go  valid parentheses.ts
(+3 files in other folders)
